--- a/index.html
+++ b/index.html
@@ -139,9 +139,12 @@
       <p>A boy born with divine potential struggles to protect his world.</p>
       <a href="episode4.html" class="btn">Watch Now</a>
     </div>
-    <div class="card">
-      <img src="https://i.ibb.co/W3XKMVL/throneofseal.jpg" alt="Throne of Seal">
-      <h2>Throne of Seal</h2>
+    <div class="series-card">
+  <h2>Throne of Seal</h2>
+  <a href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEj3eVxF8x2pocUB49ByC0ZJ5NY_An8VGkI_IxakLkWPtFhAu_nohww5abFP2N5brXtWK1WGmaMGYgLpjB9H5bBcoD8tZchPJBf57rZQTJDL6uCW9W1P1whWRiMHRTqbbxyI2aEGPlqBSmIBf7FNx7AQJzjxa68ywk_D14u02LEcpBFfTHMMZehcS90cKgk/s1280/IMG_20250326_171657_599.jpg" target="_blank">
+    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEj3eVxF8x2pocUB49ByC0ZJ5NY_An8VGkI_IxakLkWPtFhAu_nohww5abFP2N5brXtWK1WGmaMGYgLpjB9H5bBcoD8tZchPJBf57rZQTJDL6uCW9W1P1whWRiMHRTqbbxyI2aEGPlqBSmIBf7FNx7AQJzjxa68ywk_D14u02LEcpBFfTHMMZehcS90cKgk/s400/IMG_20250326_171657_599.jpg" alt="Throne of Seal" height="250">
+  </a>
+</div> 
       <p>Step into a realm of knights, magic, and powerful seals of destiny.</p>
       <a href="episode5.html" class="btn">Watch Now</a>
     </div>
