--- a/index.html
+++ b/index.html
@@ -73,22 +73,9 @@
       font-size: 1.2rem;
     }
     .card p {
-      padding: 0 15px 15px;
+      padding: 0 15px 20px;
       font-size: 0.9rem;
       color: #ccc;
-    }
-    .btn {
-      display: inline-block;
-      margin: 10px 0 20px;
-      padding: 10px 20px;
-      background: #e50914;
-      color: #fff;
-      text-decoration: none;
-      border-radius: 6px;
-      transition: background 0.3s;
-    }
-    .btn:hover {
-      background: #b00710;
     }
     footer {
       text-align: center;
@@ -119,40 +106,31 @@
       <img src="https://i.ibb.co/zN1LKw5/soulland2.jpg" alt="Soul Land 2">
       <h2>Soul Land 2</h2>
       <p>Experience the evolution of Tang San's legacy in this new generation.</p>
-      <a href="episode1.html" class="btn">Watch Now</a>
     </div>
     <div class="card">
       <img src="https://i.ibb.co/5TcBkph/btth.jpg" alt="Battle Through the Heavens">
       <h2>Battle Through the Heavens</h2>
       <p>Follow Xiao Yan as he battles to reclaim his power in a mystical world.</p>
-      <a href="episode2.html" class="btn">Watch Now</a>
     </div>
     <div class="card">
       <img src="https://i.ibb.co/S7cDtFg/renegade.jpg" alt="Renegade Immortal">
       <h2>Renegade Immortal</h2>
       <p>A story of cultivation, fate, and defiance against the heavens.</p>
-      <a href="episode3.html" class="btn">Watch Now</a>
     </div>
     <div class="card">
       <img src="https://i.ibb.co/Ch7k5PR/perfectworld.jpg" alt="Perfect World">
       <h2>Perfect World</h2>
       <p>A boy born with divine potential struggles to protect his world.</p>
-      <a href="episode4.html" class="btn">Watch Now</a>
     </div>
-    <div class="series-card">
-  <h2>Throne of Seal</h2>
-  <a href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEj3eVxF8x2pocUB49ByC0ZJ5NY_An8VGkI_IxakLkWPtFhAu_nohww5abFP2N5brXtWK1WGmaMGYgLpjB9H5bBcoD8tZchPJBf57rZQTJDL6uCW9W1P1whWRiMHRTqbbxyI2aEGPlqBSmIBf7FNx7AQJzjxa68ywk_D14u02LEcpBFfTHMMZehcS90cKgk/s1280/IMG_20250326_171657_599.jpg" target="_blank">
-    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEj3eVxF8x2pocUB49ByC0ZJ5NY_An8VGkI_IxakLkWPtFhAu_nohww5abFP2N5brXtWK1WGmaMGYgLpjB9H5bBcoD8tZchPJBf57rZQTJDL6uCW9W1P1whWRiMHRTqbbxyI2aEGPlqBSmIBf7FNx7AQJzjxa68ywk_D14u02LEcpBFfTHMMZehcS90cKgk/s400/IMG_20250326_171657_599.jpg" alt="Throne of Seal" height="250">
-  </a>
-</div> 
+    <div class="card">
+      <img src="https://i.ibb.co/W3XKMVL/throneofseal.jpg" alt="Throne of Seal">
+      <h2>Throne of Seal</h2>
       <p>Step into a realm of knights, magic, and powerful seals of destiny.</p>
-      <a href="episode5.html" class="btn">Watch Now</a>
     </div>
     <div class="card">
       <img src="https://i.ibb.co/W35cK2M/swallowedstar.jpg" alt="Swallowed Star">
       <h2>Swallowed Star</h2>
       <p>In a futuristic world, warriors rise to protect humanity from beasts.</p>
-      <a href="episode6.html" class="btn">Watch Now</a>
     </div>
   </main>
 
